test/lib_eval.expected
@array [
]
@hash [
]
@int 42
Uncaught exception of type SyntaxError: syntax error, unexpected '-' at line 0
